force-app/main/default/objects/OKR_Case_Study__c/OKR_Case_Study__c.object-meta.xml
<CustomObject>
    <label>Case Study</label>
    <nameField>
        <label>Case Study Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Study</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>