force-app/main/default/objects/OKR_Case_Study__c/fields/Case_Study_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Study_Date__c</fullName>
    <label>Case Study Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>