force-app/main/default/objects/OKR_Case_Study__c/fields/Key_Result__c.field-meta.xml
<CustomField>
    <fullName>Key_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Result</label>
    <referenceTo>Key_Result__c</referenceTo>
    <relationshipLabel>Case Study</relationshipLabel>
    <relationshipName>Case_Study1</relationshipName>
    <type>Lookup</type>
</CustomField>